--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Panda's Birthday Wish</title>
+  <title>My Panda's Birthday </title>
   <link
     href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Montserrat:wght@400;600&display=swap"
     rel="stylesheet">
@@ -285,4 +285,5 @@
 </body>
 
 </html>
+
 
